# libsmcapi

./: .gitignore  CMakeLists.txt  library.cpp  library.h
examples/: example.h
examples/Comm/: CommConfig.txt  comm_example.cpp
include/comm/: Comm.hpp
include/infra/: ConfigFile.h
src/infra/: ConfigFIle.cpp
tests/: CMakeLists.txt  tests.cpp
